# blc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: backend-ci.yaml  backend-deploy.yaml  bootstrap-event.yaml  ci.yaml  make-frontend-password-protected.yaml  make-frontend-public.yaml  web-ci.yaml  web-deploy.yaml
api/: Cargo.toml  Samconfig.toml  samconfig.toml  template.yaml
api/src/: http_handler.rs  main.rs
api/src/application/: admin_login.rs  create_event.rs  errors.rs  get_poster_upload_url.rs  list_events.rs  mod.rs  ports.rs  register_for_event.rs  services.rs  views.rs
api/src/domain/: registration.rs
api/src/handlers/: admin_login.rs  create_event.rs  event_posters.rs  list_registrations.rs  mod.rs  register_for_event.rs
api/src/infrastructure/: auth.rs  email.rs  jwt.rs  mod.rs
api/src/infrastructure/dynamo/: events_repo.rs  registrations_repo.rs
api/src/infrastructure/s3/: mod.rs  poster_storage.rs
api/src/utils/: mod.rs  response.rs
docs/: API_CONTRACT.md  DB.md
scripts/: dump-repo.sh
src/: http_handler.rs
src/application/: errors.rs  get_event.rs  list_registrations.rs  ports.rs  register_for_event.rs  services.rs
src/domain/: event.rs  mod.rs  types.rs
src/handlers/: get_event.rs  get_poster_upload_url.rs  list_events.rs  register_for_event.rs
src/infrastructure/: clock.rs
src/infrastructure/dynamo/: events_repo.rs  mod.rs
src/utils/: auth_guard.rs  parse.rs  response.rs
web/: .env.example  .gitignore  README.md  package-lock.json  package.json
web/public/: index.html
web/src/: App.css  App.js  api.js
(+5 files in other folders)
