[package]
name = "blc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blc"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# AWS Lambda runtime
lambda_runtime = "0.11"
lambda_http = "0.11"

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-s3 = { version = "1", features = ["rt-tokio"] }
aws-sdk-ssm = "1"

futures = "0.3"

# Async trait support
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }

# JWT
jsonwebtoken = "9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hash
argon2 = "0.5"
password-hash = "0.5"

# Base64 (cursor encoding)
base64 = "0.22"

# Unique ID generation
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
